# c2-backend-vps-wip

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.json
c2vps/: CMakeLists.txt
c2vps/include/: c2vps.h  db_manage.h  hash.h  mail.h
c2vps/src/: c2vps.cpp  db_manage.cpp  hash.cpp  mail.cpp
